<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_marginTop="100dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/app_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/otp_verification"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/enter_the_otp_code_you_received_via_sms"
                android:textAlignment="center"
                android:textColor="#898989"
                android:textSize="18sp" />

            <com.chaos.view.PinView
                android:id="@+id/pinView_otp_input"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="18sp"
                app:itemCount="6"
                app:itemHeight="48dp"
                app:itemRadius="10dp"
                app:lineColor="@color/colorPrimaryDark"
                app:viewType="rectangle" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOTPCodeSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/my_button"
                android:text="@string/verify_code"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="25dp"
                android:text="@string/resend_code"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>