<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chat.CreateChatGroupActivity">

    <LinearLayout
        android:id="@+id/card_layout_create_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/viewColor"
        android:background="@drawable/background_gift_history"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/create_new_group"
            android:textAlignment="center"
            android:textColor="@color/text_color_dark"
            android:textSize="24sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/group_image_view"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/app_icon" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_pick_image"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center"
                android:letterSpacing="0.02"
                android:text="@string/upload_group_image"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                app:cornerRadius="8dp"
                app:elevation="5dp"
                android:visibility="gone"
                app:iconPadding="10dp"
                app:strokeColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/group_name"
                android:textAllCaps="true"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:textColor="@color/text_color_light"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/et_group_name"
                android:hint="@string/enter_group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:imeOptions="actionDone"
                android:textColor="@color/text_color_dark"
                android:textSize="16sp"
                android:maxLength="30"
                android:padding="@dimen/_10sdp"
                android:maxLines="1"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="end"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_group_next_page"
                android:layout_width="150dp"
                android:layout_height="58dp"
                android:backgroundTint="@color/colorPrimary"
                android:letterSpacing="0"
                android:stateListAnimator="@null"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="8dp"
                app:icon="@drawable/ic_baseline_navigate_next_24"
                app:iconGravity="end" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>