<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"

    tools:context=".ui.chat.MessageFragment">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_level"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/background_circular"
        android:gravity="center"
        android:padding="@dimen/_2sdp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile">

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/greenOp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/userNameDetailsForHistory"
            app:layout_constraintTop_toBottomOf="@id/detailsProfileImage"
            tools:text="7" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/iv_profile"
        app:layout_constraintRight_toRightOf="@id/iv_profile"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        tools:text="Hasan Mamun khan" />

    <TextView
        android:id="@+id/tv_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/greenOp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/tv_user_name"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        tools:text="id : 10">

    </TextView>

    <TextView
        android:id="@+id/tv_user_diamond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:background="@color/greenOp"
        android:paddingEnd="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/tv_user_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
        tools:ignore="RtlSymmetry"
        tools:text="10000000000 " />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_diamond">

        <Button
            android:id="@+id/btn_block_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/red"
            android:text="@string/block"
            android:textColor="@color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view3" />


        <Button
            android:id="@+id/userFollowForHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/green"
            android:text="@string/follow"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view3" />


<!--        <ImageView-->
<!--            android:id="@+id/userFollowForHistory"-->
<!--            android:layout_width="@dimen/_30sdp"-->
<!--            android:layout_height="@dimen/_30sdp"-->
<!--            android:layout_marginHorizontal="@dimen/_5sdp"-->
<!--            android:src="@drawable/plus"-->
<!--            android:textStyle="bold"-->
<!--            tools:ignore="ContentDescription" />-->

        <Button
            android:id="@+id/btn_report_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/greenOp"
            android:text="@string/report"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view3" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_messages"
        android:layout_width="0dp"
        android:layout_height="@dimen/_200sdp"
        android:background="@color/white"
        android:minHeight="@dimen/_200sdp"
        app:layout_constraintBottom_toTopOf="@+id/message_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <RelativeLayout
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/send_button_message"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_your_message"
            android:maxHeight="100dp"
            android:padding="10dp"
            android:scrollHorizontally="false"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <ImageView
            android:id="@+id/send_button_message"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="2dp"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_send_24"
            app:tint="@color/colorPrimary"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>